--- a/curriculo.html
+++ b/curriculo.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<! DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Currículo Fulano da Silva</title>
+        <style>
+            h2{
+                background-color: #5599DD;
+                color: #DDDDDD;
+            }
+            .exp{
+                text-indent:40px;
+            }
+            #email{
+                text-decoration:underline;
+                font-style:italic;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Fulano da Silva</h1>
+        <p class="exp">28 anos, casado</p>
+        <p class="exp">(99) 9999-9999</p>
+        <p class="exp" id="email">fulano@email.com</p>
+        <h2>Objetivos</h2>
+        <h2>Experiências Anteriores</h2>
+        <h3>Pamonharia de Piracicaba - jun/2010 - atual</h3>
+        <h3>Mineradora Minério - ago/2008 - jun/2010</h3>
 
-</body>
+    </body>
 </html>
