--- a/curriculo.html
+++ b/curriculo.html
@@ -3,29 +3,52 @@
     <head>
         <meta charset="UTF-8">
         <title>Currículo Fulano da Silva</title>
-        <style>
-            h2{
-                background-color: #5599DD;
-                color: #DDDDDD;
-            }
-            .exp{
-                text-indent:40px;
-            }
-            #email{
-                text-decoration:underline;
-                font-style:italic;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="curriculo.css">
     </head>
     <body>
+        <section id="cabecalho">
         <h1>Fulano da Silva</h1>
         <p class="exp">28 anos, casado</p>
         <p class="exp">(99) 9999-9999</p>
-        <p class="exp" id="email">fulano@email.com</p>
+        <p class="exp" id="email"><a href="mailto:fulano@email.com">fulano@email.com</a></p>
+        </section>
+
         <h2>Objetivos</h2>
+        <p>Programação/Análise de Sistemas</p>
+
+        <h2>Resumo</h2>
+        <p>Desenvolvedor com 10 anos de experiência, focados principalmente na linguagem Java, possuo a certificação de SCJP.</p>
+        <p>Entusiasta de práticas ágeis como XP, Scrum</p>
+        <p>Meu principal interesse é participar de equipes ágeis que se preocupem com qualidade de código</p>
+
+        <h2>Conhecimentos</h2>
+        <ul>
+        <li>Servlet, JSP, JSF, JPA, Struts, Spring MVC</li>
+        <li>Hibernate, JPA, JDBC</li>
+        <li>Tomcat, JBoss, Glassfish</li>
+        <li>Spring, Seam, Pico</li>
+        <li>JUnit, Mockito, EasyMock</li>
+        </ul>
+
+        <h2>Formação Acadêmica</h2>
+        <p>Faculdade de Funilaria e Pintura de Computação</p>
+
+        <h2>Certificações</h2>
+        <p>SCJP Java 1.4</p>
+
+        <h2>Idiomas</h2>
+        <p>Inglês Técnico Avançado</p>
+
         <h2>Experiências Anteriores</h2>
-        <h3>Pamonharia de Piracicaba - jun/2010 - atual</h3>
-        <h3>Mineradora Minério - ago/2008 - jun/2010</h3>
+
+        <h3><a href="http://www.caelum.com.br">Pamonharia de Piracicaba</a> - jun/2010 - atual</h3>
+        <p>Na Pamonharia de Piracicaba participo de migração de um ERP Desktop em <span class="tec">Delphi</span> para uma versão Web utilizando Java com as tecnologias, <span class="tec">tomcat</span>, <span class="tec">JSF</span>, <span>JPA</span> e <span class="tec">JMS</span></p>
+
+        <h3><a href="http://www.caelum.com.br">Mineradora Minério</a> - ago/2008 - jun/2010</h3>
+        <p>Análise e desenvolvimento do sistema de integração entre a o posto de coleta e a matriz da empresa utilizando a linguagem <span class="tec">Java</span>, e as tecnologias, <span class="tec">RMI</span>, <span>Jax-WS</span>, <span class="tec">JDBC</span> e <span class="tec">Spring</span></p>
+
+        <h3><a href="http://www.caelum.com.br">Consultoria Consultus</a> - jan/2002 - ago/2008</h3>
+        <p>Manutenção Corretiva e Desenvolvimento de diversos sistemas para os clientes da empresa entre as principais linguagens trabalhadas estão, <span class="tec">PHP</span>, <span class="tec">Delphi</span>, <span  class="tec">Java</span> e as principais tecnologias foram <span class="tec">Servlet</span>, <span class="tec">JSP</span>, <span class="tec">Struts 1.x</span>, <span class="tec">JDBC</span>, <span class="tec">Hibernate</span>, <span class="tec">EJB 2.x</span></p>
 
     </body>
 </html>
